--- a/style.css
+++ b/style.css
@@ -8,30 +8,13 @@ body{
     font-family: "Acme", sans-serif;
   font-size: 20px;
   color: #2c3e50;
-  background-color: #0FC2C0;
+  background-color: #cfcfcf;
 }
 .are_calc{
     padding: 1em;
   box-shadow: 6px 6px 20px rgb(0, 0, 0), -6px -6px 20px rgb(0, 0, 0);
-  background-color: #008F8C;
+  background-color: #f8f8f8;
   border-radius: 10px;
   margin-top: 15%;
 
-
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    max-width: 500px;
-    width: 100%[]
-    paddig 1em;
-
-    text-align: center;
-    font-size: 2em;
-    text-decoration: underline;
-
-    display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  padding: 0.3em;
 }
